--- a/styles/global.css
+++ b/styles/global.css
@@ -35,3 +35,28 @@ body {
   height: 1.2em !important;
   width: 1.2em !important;
 }
+
+.back-to-top {
+display: none; /* 默認是隱藏的，這樣在第一屏才不顯示 */
+position: fixed; /* 位置是固定的 */
+bottom: 20px; /* 顯示在頁面底部 */
+right: 30px; /* 顯示在頁面的右邊 */
+z-index: 99; /* 確保不被其他功能覆蓋 */
+border: 1px solid #5cb85c; /* 顯示邊框 */
+outline: none; /* 不顯示外框 */
+background-color: #fff; /* 設置背景背景顏色 */
+color: #5cb85c; /* 設置文本顏色 */
+cursor: pointer; /* 滑鼠移到按鈕上顯示手型 */
+padding: 10px 15px 15px 15px; /* 增加一些內邊距 */
+border-radius: 10px; /* 增加圓角 */
+
+}
+
+.back-to-top:hover {
+background-color: #5cb85c; /* 滑鼠移上去時，反轉顏色 */
+color: #fff;
+
+}
+
+
+
